--- a/res/layout/signin_tablet.xml
+++ b/res/layout/signin_tablet.xml
@@ -195,6 +195,7 @@
 							android:paddingLeft="3sp"
 							android:background="#00000000"				
 							android:singleLine="true"
+							android:textCursorDrawable="@null"
 							/>											    
 					</LinearLayout>		
 					<LinearLayout
@@ -231,7 +232,8 @@
 							android:textSize="22sp"
 							android:textColor="#000000"
 							android:hint="@string/pw_hint_password"		
-							android:textColorHint="#777777"			
+							android:textColorHint="#777777"
+							android:textCursorDrawable="@null"										
 							android:paddingLeft="3sp"
 							android:background="#00000000"
 							android:password="true"	
@@ -286,7 +288,8 @@
 							android:textSize="22sp"
 							android:textColor="#000000"
 							android:hint="@string/pw_hint_name"		
-							android:textColorHint="#777777"						
+							android:textColorHint="#777777"		
+							android:textCursorDrawable="@null"											
 			    			android:inputType="textEmailAddress"								
 							android:paddingLeft="3sp"
 							android:background="#00000000"				
@@ -327,7 +330,8 @@
 							android:textColor="#000000"
 							android:hint="@string/pw_hint_email"		
 							android:textColorHint="#777777"						
-			    			android:inputType="textEmailAddress"								
+			    			android:inputType="textEmailAddress"
+							android:textCursorDrawable="@null"			    											
 							android:paddingLeft="3sp"
 							android:background="#00000000"				
 							android:singleLine="true"
@@ -367,7 +371,8 @@
 							android:textSize="22sp"
 							android:textColor="#000000"
 							android:hint="@string/pw_hint_password"		
-							android:textColorHint="#777777"			
+							android:textColorHint="#777777"
+							android:textCursorDrawable="@null"										
 							android:paddingLeft="3sp"
 							android:background="#00000000"
 							android:password="true"	
@@ -408,7 +413,8 @@
 							android:textSize="22sp"
 							android:textColor="#000000"
 							android:hint="@string/pw_hint_verify"		
-							android:textColorHint="#777777"			
+							android:textColorHint="#777777"
+							android:textCursorDrawable="@null"										
 							android:paddingLeft="3sp"
 							android:background="#00000000"
 							android:password="true"	
