ui adjustments for v66
git-svn-id: http://svn.sj.9x9.tv:8080/repos/misc/trunk/mobile/android51a@5901 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/res/layout/menu_layer.xml
+++ b/res/layout/menu_layer.xml
@@ -34,6 +34,7 @@
 	        android:id="@+id/identity"
 		    android:layout_width="fill_parent"
 		    android:layout_height="wrap_content"
+		    android:layout_marginTop="10dip"
 		    android:orientation="horizontal">
 			<ImageView					    	    
 				android:layout_width="wrap_content"
