--- a/res/layout/comment_1.xml
+++ b/res/layout/comment_1.xml
@@ -7,6 +7,7 @@
   	    android:id="@+id/num_comments_header"			        
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		android:paddingLeft="6dip"		
 		android:textSize="16sp"
 		android:textColor="#FFFFFF"
 		android:gravity="top"
