--- a/res/layout/top_bar.xml
+++ b/res/layout/top_bar.xml
@@ -1,4 +1,5 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"	    
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"	 
+    xmlns:app="http://schemas.android.com/apk/res-auto"   
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="top|center_horizontal"
@@ -96,7 +97,7 @@
 					/>			    
 			</LinearLayout>   			
 		</FrameLayout>
-		
+				
 			<android.support.v7.app.MediaRouteButton
 			    android:id="@+id/media_route_button_main"
 				android:mediaRouteTypes="user"			    
@@ -104,9 +105,16 @@
 			    android:layout_height="fill_parent"
 			    android:layout_gravity="right|center_vertical"
 			    android:gravity="right|center_vertical"		    
-			    android:visibility="visible"
-			    android:actionButtonStyle="@style/Theme.MediaRouter"
+			    android:visibility="visible"				    			    
 			    />
+			<!-- 					    app:mediaRouteOffDrawable="@drawable/icon_follow_black"
+			    app:mediaRouteOnDrawable="@drawable/icon_home"			    
+				app:mediaRouteConnectingDrawable="@drawable/icon_mail"		
+				app:externalRouteEnabledDrawable="@drawable/icon_follow_black"	
+				-->
+		<!-- app:mediaRouteButtonStyle="@style/Theme.MediaRouter.Light" -->
+		<!-- 			    app:externalRouteEnabledDrawable="@drawable/icon_follow_black" -->
+		<!-- android:actionButtonStyle="@style/Theme.MediaRouter" -->
 		<!-- setting this style on MediaRoutebutton requires API level 16! -->	
 		<!-- android.support.v7.app.MediaRouteButton
 		    android:id="@+id/media_route_button_main"
