--- a/res/layout/signin_phone.xml
+++ b/res/layout/signin_phone.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:id="@+id/signin_back"	        
 	    android:layout_width="match_parent"
-	    android:layout_height="60dip"
+	    android:layout_height="50dip"
 	    android:orientation="horizontal">
 		<ImageView					    	    
 			android:layout_width="wrap_content"
@@ -42,10 +42,10 @@
         android:id="@+id/gossamer"    
 	    android:layout_width="fill_parent"
 	    android:layout_height="fill_parent"
-	    android:layout_marginLeft="60dip"
-	    android:layout_marginRight="60dip"			  
-	    android:layout_marginTop="60dip"
-	    android:layout_marginBottom="60dip"				      
+	    android:layout_marginLeft="50dip"
+	    android:layout_marginRight="50dip"			  
+	    android:layout_marginTop="50dip"
+	    android:layout_marginBottom="50dip"				      
 	    android:orientation="vertical">		
 	    <LinearLayout  
 		    android:layout_width="fill_parent"
@@ -220,211 +220,216 @@
 					android:nextFocusDown="@+id/sign_in_button"							
 					android:nextFocusForward="@+id/sign_in_button"									
 					/>				    
-			</LinearLayout>    	
-			<LinearLayout
-		        android:id="@+id/sign_up_content"
-			    android:layout_width="fill_parent"
-			    android:layout_height="fill_parent"
-			   	android:orientation="vertical"
-			   	android:visibility="gone">
-			    <LinearLayout
-					android:id="@+id/sign_up_name_container"			        
-				    android:layout_width="match_parent"
-				    android:layout_height="60dip"
-				    android:layout_marginLeft="30dip"
-				    android:layout_marginRight="30dip"		    
-				    android:orientation="horizontal">
-					<ImageView					    	    
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"	
-						android:layout_marginLeft="12dip"
-						android:layout_marginRight="12dip"
-						android:layout_gravity="center"
-						android:src="@drawable/icon_user_white"	
-						android:focusable="true"						
-						/>		   		
-					<EditText
-					    android:id="@+id/sign_up_name"
-					    android:tag="editable"	     					    			        
-						android:layout_width="wrap_content"
-						android:layout_height="fill_parent"
-						android:gravity="left|center_vertical"
-						android:textSize="22sp"
-						android:textColor="#FFFFFF"
-						android:hint="@string/pw_hint_name"		
-						android:textColorHint="#FFFFFF"						
-		    			android:inputType="textEmailAddress"								
-						android:paddingLeft="3sp"
-						android:background="#00000000"				
-						android:singleLine="true"
-						android:nextFocusDown="@+id/sign_up_email"								
-						android:nextFocusForward="@+id/sign_up_email"								
-						/>											    
-				</LinearLayout>				    
+			</LinearLayout> 
+			<ScrollView
+			    android:layout_width="match_parent"
+			    android:layout_height="match_parent">			   	
 				<LinearLayout
-				    android:layout_width="match_parent"
-				    android:layout_height="2dip"
-				    android:layout_marginLeft="20dip"
-				    android:layout_marginRight="20dip"		    
-				    android:background="#A0A0A0"
-				    android:orientation="horizontal"
-				    />					
-			    <LinearLayout
-					android:id="@+id/sign_up_email_container"			        
-				    android:layout_width="match_parent"
-				    android:layout_height="60dip"
-				    android:layout_marginLeft="30dip"
-				    android:layout_marginRight="30dip"		    
-				    android:orientation="horizontal">
-					<ImageView					    	    
+			        android:id="@+id/sign_up_content"
+				    android:layout_width="fill_parent"
+				    android:layout_height="fill_parent"
+				   	android:orientation="vertical"
+				   	android:visibility="gone">
+				    <LinearLayout
+						android:id="@+id/sign_up_name_container"			        
+					    android:layout_width="match_parent"
+					    android:layout_height="60dip"
+					    android:layout_marginLeft="30dip"
+					    android:layout_marginRight="30dip"		    
+					    android:orientation="horizontal">
+						<ImageView					    	    
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"	
+							android:layout_marginLeft="12dip"
+							android:layout_marginRight="12dip"
+							android:layout_gravity="center"
+							android:src="@drawable/icon_user_white"	
+							android:focusable="true"						
+							/>		   		
+						<EditText
+						    android:id="@+id/sign_up_name"
+						    android:tag="editable"	     					    			        
+							android:layout_width="wrap_content"
+							android:layout_height="fill_parent"
+							android:gravity="left|center_vertical"
+							android:textSize="22sp"
+							android:textColor="#FFFFFF"
+							android:hint="@string/pw_hint_name"		
+							android:textColorHint="#FFFFFF"						
+			    			android:inputType="textEmailAddress"								
+							android:paddingLeft="3sp"
+							android:background="#00000000"				
+							android:singleLine="true"
+							android:nextFocusDown="@+id/sign_up_email"								
+							android:nextFocusForward="@+id/sign_up_email"								
+							/>											    
+					</LinearLayout>				    
+					<LinearLayout
+					    android:layout_width="match_parent"
+					    android:layout_height="2dip"
+					    android:layout_marginLeft="20dip"
+					    android:layout_marginRight="20dip"		    
+					    android:background="#A0A0A0"
+					    android:orientation="horizontal"
+					    />			
+				    <LinearLayout
+						android:id="@+id/sign_up_email_container"			        
+					    android:layout_width="match_parent"
+					    android:layout_height="60dip"
+					    android:layout_marginLeft="30dip"
+					    android:layout_marginRight="30dip"		    
+					    android:orientation="horizontal">
+						<ImageView					    	    
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"	
+							android:layout_marginLeft="12dip"
+							android:layout_marginRight="12dip"
+							android:layout_gravity="center"
+							android:src="@drawable/icon_mail_white"	
+							android:focusable="true"						
+							/>		   		
+						<EditText
+						    android:id="@+id/sign_up_email"
+						    android:tag="editable"	     					    			        
+							android:layout_width="wrap_content"
+							android:layout_height="fill_parent"
+							android:gravity="left|center_vertical"
+							android:textSize="22sp"
+							android:textColor="#FFFFFF"
+							android:hint="@string/pw_hint_email"		
+							android:textColorHint="#FFFFFF"						
+			    			android:inputType="textEmailAddress"								
+							android:paddingLeft="3sp"
+							android:background="#00000000"				
+							android:singleLine="true"
+							android:nextFocusDown="@+id/sign_up_password"									
+							android:nextFocusForward="@+id/sign_up_password"							
+							/>											    
+					</LinearLayout>
+					<LinearLayout
+					    android:layout_width="match_parent"
+					    android:layout_height="2dip"
+					    android:layout_marginLeft="20dip"
+					    android:layout_marginRight="20dip"		    
+					    android:background="#A0A0A0"
+					    android:orientation="horizontal"
+					    />								
+				    <LinearLayout
+						android:id="@+id/sign_up_password_container"			        
+					    android:layout_width="match_parent"
+					    android:layout_height="60dip"
+					    android:layout_marginLeft="30dip"
+					    android:layout_marginRight="30dip"			    
+					    android:orientation="horizontal">
+						<ImageView					    	    
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"	
+							android:layout_marginLeft="12dip"
+							android:layout_marginRight="12dip"
+							android:layout_gravity="center"
+							android:src="@drawable/icon_password_white"	
+							android:focusable="true"						
+							/>		   		
+						<EditText     
+						    android:id="@+id/sign_up_password"
+						    android:tag="editable"	     					    
+							android:layout_width="wrap_content"
+							android:layout_height="fill_parent"
+							android:layout_gravity="top"
+							android:gravity="left|center_vertical"
+							android:textSize="22sp"
+							android:textColor="#FFFFFF"
+							android:hint="@string/pw_hint_password"		
+							android:textColorHint="#FFFFFF"			
+							android:paddingLeft="3sp"
+							android:background="#00000000"
+							android:password="true"	
+							android:singleLine="true"					
+							android:nextFocusDown="@+id/sign_up_verify"										
+							android:nextFocusForward="@+id/sign_up_verify"								
+							/>											    
+					</LinearLayout>
+					<LinearLayout
+					    android:layout_width="match_parent"
+					    android:layout_height="2dip"
+					    android:layout_marginLeft="20dip"
+					    android:layout_marginRight="20dip"		    
+					    android:background="#A0A0A0"
+					    android:orientation="horizontal"
+					    />						
+				    <LinearLayout
+						android:id="@+id/sign_up_verify_container"			        
+					    android:layout_width="match_parent"
+					    android:layout_height="60dip"
+					    android:layout_marginLeft="30dip"
+					    android:layout_marginRight="30dip"			    
+					    android:orientation="horizontal">
+						<ImageView					    	    
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"	
+							android:layout_marginLeft="12dip"
+							android:layout_marginRight="12dip"
+							android:layout_gravity="center"
+							android:src="@drawable/icon_password_white"	
+							android:focusable="true"						
+							/>		   		
+						<EditText     
+						    android:id="@+id/sign_up_verify"
+						    android:tag="editable"	     					    
+							android:layout_width="wrap_content"
+							android:layout_height="fill_parent"
+							android:layout_gravity="top"
+							android:gravity="left|center_vertical"
+							android:textSize="22sp"
+							android:textColor="#FFFFFF"
+							android:hint="@string/pw_hint_verify"		
+							android:textColorHint="#FFFFFF"			
+							android:paddingLeft="3sp"
+							android:background="#00000000"
+							android:password="true"	
+							android:singleLine="true"					
+							android:nextFocusDown="@+id/sign_up_button"									
+							android:nextFocusForward="@+id/sign_up_button"									
+							/>											    
+					</LinearLayout>					
+			        <TextView	        
+			            android:id="@+id/by_creating"
 						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"	
-						android:layout_marginLeft="12dip"
-						android:layout_marginRight="12dip"
-						android:layout_gravity="center"
-						android:src="@drawable/icon_mail_white"	
-						android:focusable="true"						
-						/>		   		
-					<EditText
-					    android:id="@+id/sign_up_email"
-					    android:tag="editable"	     					    			        
-						android:layout_width="wrap_content"
-						android:layout_height="fill_parent"
-						android:gravity="left|center_vertical"
-						android:textSize="22sp"
-						android:textColor="#FFFFFF"
-						android:hint="@string/pw_hint_email"		
-						android:textColorHint="#FFFFFF"						
-		    			android:inputType="textEmailAddress"								
-						android:paddingLeft="3sp"
-						android:background="#00000000"				
-						android:singleLine="true"
-						android:nextFocusDown="@+id/sign_up_password"									
-						android:nextFocusForward="@+id/sign_up_password"							
-						/>											    
-				</LinearLayout>
-				<LinearLayout
-				    android:layout_width="match_parent"
-				    android:layout_height="2dip"
-				    android:layout_marginLeft="20dip"
-				    android:layout_marginRight="20dip"		    
-				    android:background="#A0A0A0"
-				    android:orientation="horizontal"
-				    />								
-			    <LinearLayout
-					android:id="@+id/sign_up_password_container"			        
-				    android:layout_width="match_parent"
-				    android:layout_height="60dip"
-				    android:layout_marginLeft="30dip"
-				    android:layout_marginRight="30dip"			    
-				    android:orientation="horizontal">
-					<ImageView					    	    
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"	
-						android:layout_marginLeft="12dip"
-						android:layout_marginRight="12dip"
-						android:layout_gravity="center"
-						android:src="@drawable/icon_password_white"	
-						android:focusable="true"						
-						/>		   		
-					<EditText     
-					    android:id="@+id/sign_up_password"
-					    android:tag="editable"	     					    
-						android:layout_width="wrap_content"
-						android:layout_height="fill_parent"
+						android:layout_height="wrap_content"
+						android:layout_marginTop="5dip"
+					    android:layout_marginLeft="20dip"
+					    android:layout_marginRight="20dip"					
 						android:layout_gravity="top"
 						android:gravity="left|center_vertical"
+						android:textSize="14sp"
+						android:textColor="#EEEEEE"
+						android:text="@string/by_creating"								
+						/>				    								
+					<LinearLayout
+					    android:layout_width="match_parent"
+					    android:layout_height="0dip"	    
+					    android:layout_weight="1"
+					    android:background="#00000000"
+					    android:orientation="horizontal"
+					    />							
+				    <Button     
+				        android:id="@+id/sign_up_button"
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content"
+					    android:layout_marginLeft="20dip"
+					    android:layout_marginRight="20dip"	
+					    android:layout_marginTop="20dip"					
+						android:layout_marginBottom="20dip"
+						android:layout_gravity="bottom|center_horizontal"
 						android:textSize="22sp"
 						android:textColor="#FFFFFF"
-						android:hint="@string/pw_hint_password"		
-						android:textColorHint="#FFFFFF"			
-						android:paddingLeft="3sp"
-						android:background="#00000000"
-						android:password="true"	
-						android:singleLine="true"					
-						android:nextFocusDown="@+id/sign_up_verify"										
-						android:nextFocusForward="@+id/sign_up_verify"								
-						/>											    
+						android:text="@string/si_sign_up_button"
+						android:background="@drawable/btn_sign"		
+						android:nextFocusDown="@+id/sign_up_button"								
+						android:nextFocusForward="@+id/sign_up_button"						
+						/>						
 				</LinearLayout>
-				<LinearLayout
-				    android:layout_width="match_parent"
-				    android:layout_height="2dip"
-				    android:layout_marginLeft="20dip"
-				    android:layout_marginRight="20dip"		    
-				    android:background="#A0A0A0"
-				    android:orientation="horizontal"
-				    />						
-			    <LinearLayout
-					android:id="@+id/sign_up_verify_container"			        
-				    android:layout_width="match_parent"
-				    android:layout_height="60dip"
-				    android:layout_marginLeft="30dip"
-				    android:layout_marginRight="30dip"			    
-				    android:orientation="horizontal">
-					<ImageView					    	    
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"	
-						android:layout_marginLeft="12dip"
-						android:layout_marginRight="12dip"
-						android:layout_gravity="center"
-						android:src="@drawable/icon_password_white"	
-						android:focusable="true"						
-						/>		   		
-					<EditText     
-					    android:id="@+id/sign_up_verify"
-					    android:tag="editable"	     					    
-						android:layout_width="wrap_content"
-						android:layout_height="fill_parent"
-						android:layout_gravity="top"
-						android:gravity="left|center_vertical"
-						android:textSize="22sp"
-						android:textColor="#FFFFFF"
-						android:hint="@string/pw_hint_verify"		
-						android:textColorHint="#FFFFFF"			
-						android:paddingLeft="3sp"
-						android:background="#00000000"
-						android:password="true"	
-						android:singleLine="true"					
-						android:nextFocusDown="@+id/sign_up_button"									
-						android:nextFocusForward="@+id/sign_up_button"									
-						/>											    
-				</LinearLayout>					
-		        <TextView	        
-		            android:id="@+id/by_creating"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_marginTop="20dip"
-				    android:layout_marginLeft="20dip"
-				    android:layout_marginRight="20dip"					
-					android:layout_gravity="top"
-					android:gravity="left|center_vertical"
-					android:textSize="18sp"
-					android:textColor="#EEEEEE"
-					android:text="@string/by_creating"								
-					/>				    								
-				<LinearLayout
-				    android:layout_width="match_parent"
-				    android:layout_height="0dip"	    
-				    android:layout_weight="1"
-				    android:background="#00000000"
-				    android:orientation="horizontal"
-				    />							
-			    <Button     
-			        android:id="@+id/sign_up_button"
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-				    android:layout_marginLeft="30dip"
-				    android:layout_marginRight="30dip"						
-					android:layout_marginBottom="20dip"
-					android:layout_gravity="bottom|center_horizontal"
-					android:textSize="22sp"
-					android:textColor="#FFFFFF"
-					android:text="@string/si_sign_up_button"
-					android:background="@drawable/btn_sign"		
-					android:nextFocusDown="@+id/sign_up_button"								
-					android:nextFocusForward="@+id/sign_up_button"						
-					/>						
-			</LinearLayout>			
+			</ScrollView>					
 		</LinearLayout>					
 	</LinearLayout>
 </LinearLayout>
