--- a/res/layout/store_item.xml
+++ b/res/layout/store_item.xml
@@ -75,14 +75,30 @@
 		        android:layout_height="fill_parent"
 		        android:padding="6dip"
 				android:src="@drawable/icon_share_black"
-		        />
-			<ImageView
-		    	android:id="@+id/follow"
+		        />		
+			<FrameLayout
+		    	android:id="@+id/follow"			  
 		        android:layout_width="wrap_content" 
-		        android:layout_height="fill_parent"
-		        android:padding="6dip"
-				android:src="@drawable/icon_follow_black"
-		        />			
+		        android:layout_height="fill_parent">		    	  
+				<ImageView
+			    	android:id="@+id/follow_icon"
+			        android:layout_width="wrap_content" 
+			        android:layout_height="fill_parent"
+			        android:padding="6dip"
+					android:src="@drawable/icon_follow_black"
+			        />			
+			    <ProgressBar
+				    android:id="@+id/follow_progress"          
+			    	android:layout_width="fill_parent"
+			    	android:layout_height="fill_parent"
+			    	android:layout_gravity="center"
+			    	android:gravity="center"
+			        android:padding="6dip"			    	
+			    	style="@android:style/Widget.ProgressBar.Inverse"
+			    	android:visibility="gone"
+			    	/>					        
+		    </FrameLayout>
+					        
 		</LinearLayout>			
 	</LinearLayout>
 </LinearLayout>	
