--- a/res/layout/app_item.xml
+++ b/res/layout/app_item.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+	android:descendantFocusability="blocksDescendants"
     android:padding="6dip">    
     <LinearLayout
 	    android:layout_width="match_parent"
@@ -47,7 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="16dip"
-	    android:textColor="#000000"        
+	    android:textColor="#000000"       
         />
     <LinearLayout
         android:id="@+id/bottom_bar"
