--- a/res/layout/apps_layer.xml
+++ b/res/layout/apps_layer.xml
@@ -54,6 +54,7 @@
 			android:cacheColorHint="@android:color/transparent"
 			android:dividerHeight="0dp"
 			android:divider="@null"
+			android:descendantFocusability="blocksDescendants"
 			/>	 
 	   	<GridView
 			android:id="@+id/apps_list_tablet"
