--- a/res/layout/channel.xml
+++ b/res/layout/channel.xml
@@ -110,7 +110,7 @@
 				android:gravity="center_vertical|left"
 				android:singleLine="true"	
 				android:ellipsize="end"	
-				android:text="From"						
+				android:text="@string/from_uc"						
 		    	/>				
 			<ImageView
 		    	android:id="@+id/small_channel_icon"
