--- a/res/layout/top_bar.xml
+++ b/res/layout/top_bar.xml
@@ -6,49 +6,28 @@
     android:gravity="center"
     android:orientation="horizontal"
     android:background="#F6F5F1">    
-	<LinearLayout
+	<FrameLayout
 		android:id="@+id/top_bar_resizable"			    
 	    android:layout_width="match_parent"
-	    android:layout_height="fill_parent"	  
+	    android:layout_height="match_parent"	  
 	    android:orientation="horizontal">      
-		<ImageView
-		    android:id="@+id/menubutton"						    
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_marginLeft="20dip"
-			android:layout_gravity="left|center_vertical"		
-			android:gravity="left|center_vertical"			
-			android:src="@drawable/icon_menu"					
-			/>				
-		<ImageView
-		    android:id="@+id/phantom_refresh"			
-		    android:layout_height="fill_parent"
-		    android:layout_marginLeft="6dip"			    
-			android:layout_width="wrap_content"
-			android:layout_gravity="center"		
-			android:gravity="center"			
-			android:src="@drawable/icon_refresh"	
-			android:visibility="invisible"								
-			/>					      
-		<FrameLayout	    
-			android:layout_width="0dip"
-			android:layout_height="fill_parent"
-			android:layout_weight="1"
-			android:layout_gravity="center"		
-			android:gravity="center">   		  
+		<LinearLayout    
+		    android:layout_width="match_parent"
+		    android:layout_height="match_parent"	  
+		    android:orientation="horizontal">   	    
 			<ImageView
-			    android:id="@+id/logo"						    
+			    android:id="@+id/menubutton"						    
 				android:layout_width="wrap_content"
-				android:layout_height="fill_parent"
-				android:layout_gravity="center"		
-				android:gravity="center"		
-				android:adjustViewBounds="true"
-				android:scaleType="fitCenter"	
-				android:visibility="visible"											
-				/>		
+				android:layout_height="wrap_content"
+				android:layout_marginLeft="20dip"
+				android:layout_gravity="left|center_vertical"		
+				android:gravity="left|center_vertical"			
+				android:src="@drawable/icon_menu"					
+				/>
 			<LinearLayout
-				android:id="@+id/search_container"			    
-			    android:layout_width="fill_parent"
+				android:id="@+id/search_container"
+				android:layout_weight="1"			    
+			    android:layout_width="0dip"
 			    android:layout_height="fill_parent"
 			    android:layout_gravity="center"			    
 			    android:layout_marginLeft="20dip"
@@ -57,7 +36,7 @@
 			    android:layout_marginBottom="10dip"		 			       		    
 			    android:orientation="horizontal"
 			    android:background="@drawable/lightgrayround"
-			    android:visibility="gone">
+			    android:visibility="invisible">
 				<ImageView
 				    android:layout_height="fill_parent"			    
 					android:layout_width="wrap_content"
@@ -95,38 +74,34 @@
 					android:gravity="center"			
 					android:src="@drawable/search_cancel"										
 					/>			    
-			</LinearLayout>   			
-		</FrameLayout>
-				
-			<android.support.v7.app.MediaRouteButton
-			    android:id="@+id/media_route_button_main"
-				android:mediaRouteTypes="user"			    
+			</LinearLayout>
+			
+			<LinearLayout	
+			    android:id="@+id/right_buttons"    
 			    android:layout_width="wrap_content"
-			    android:layout_height="fill_parent"
+			    android:layout_height="fill_parent"	  
 			    android:layout_gravity="right|center_vertical"
-			    android:gravity="right|center_vertical"		    
-			    android:visibility="visible"				    			    
-			    />
-			<!-- 					    app:mediaRouteOffDrawable="@drawable/icon_follow_black"
-			    app:mediaRouteOnDrawable="@drawable/icon_home"			    
-				app:mediaRouteConnectingDrawable="@drawable/icon_mail"		
-				app:externalRouteEnabledDrawable="@drawable/icon_follow_black"	
-				-->
-		<!-- app:mediaRouteButtonStyle="@style/Theme.MediaRouter.Light" -->
-		<!-- 			    app:externalRouteEnabledDrawable="@drawable/icon_follow_black" -->
-		<!-- android:actionButtonStyle="@style/Theme.MediaRouter" -->
-		<!-- setting this style on MediaRoutebutton requires API level 16! -->	
-		<!-- android.support.v7.app.MediaRouteButton
-		    android:id="@+id/media_route_button_main"
-			android:mediaRouteTypes="user"			    
-		    android:layout_width="wrap_content"
-		    android:layout_height="fill_parent"
-		    android:layout_gravity="right|center_vertical"
-		    android:gravity="right|center_vertical"		    
-		    android:visibility="visible"
-		    android:style="@android:style/Widget.Holo.Light.MediaRouteButton"
-		    /-->
-		    <!-- android.support.v7.app.MediaRouteButton
+			    android:gravity="right|center_vertical"
+			    android:orientation="horizontal">  		
+				<android.support.v7.app.MediaRouteButton
+				    android:id="@+id/media_route_button_main"
+					android:mediaRouteTypes="user"			    
+				    android:layout_width="wrap_content"
+				    android:layout_height="fill_parent"
+				    android:layout_gravity="right|center_vertical"
+				    android:gravity="right|center_vertical"		    
+				    android:visibility="visible"				    			    
+				    />
+				<!-- 					    app:mediaRouteOffDrawable="@drawable/icon_follow_black"
+				    app:mediaRouteOnDrawable="@drawable/icon_home"			    
+					app:mediaRouteConnectingDrawable="@drawable/icon_mail"		
+					app:externalRouteEnabledDrawable="@drawable/icon_follow_black"	
+					-->
+			<!-- app:mediaRouteButtonStyle="@style/Theme.MediaRouter.Light" -->
+			<!-- 			    app:externalRouteEnabledDrawable="@drawable/icon_follow_black" -->
+			<!-- android:actionButtonStyle="@style/Theme.MediaRouter" -->
+			<!-- setting this style on MediaRoutebutton requires API level 16! -->	
+			<!-- android.support.v7.app.MediaRouteButton
 			    android:id="@+id/media_route_button_main"
 				android:mediaRouteTypes="user"			    
 			    android:layout_width="wrap_content"
@@ -134,26 +109,42 @@
 			    android:layout_gravity="right|center_vertical"
 			    android:gravity="right|center_vertical"		    
 			    android:visibility="visible"
-			    android:externalRouteEnabledDrawable="@drawable/ic_media_route_holo_light"
+			    android:style="@android:style/Widget.Holo.Light.MediaRouteButton"
 			    /-->
-		   
+			    <!-- android.support.v7.app.MediaRouteButton
+				    android:id="@+id/media_route_button_main"
+					android:mediaRouteTypes="user"			    
+				    android:layout_width="wrap_content"
+				    android:layout_height="fill_parent"
+				    android:layout_gravity="right|center_vertical"
+				    android:gravity="right|center_vertical"		    
+				    android:visibility="visible"
+				    android:externalRouteEnabledDrawable="@drawable/ic_media_route_holo_light"
+				    /-->
+			   
+			<ImageView
+			    android:id="@+id/searchbutton"						    
+				android:layout_width="wrap_content"
+				android:layout_height="fill_parent"
+				android:layout_marginRight="6dip"				
+				android:layout_gravity="right|center_vertical"		
+				android:gravity="right|center_vertical"			
+				android:src="@drawable/icon_search"								
+				/>						
+			</LinearLayout>											
+		</LinearLayout>	
+				
+		<!-- put in the middle, no matter what's underneath. Turn off when search is enabled -->							      		  
 		<ImageView
-		    android:id="@+id/searchbutton"						    
+		    android:id="@+id/logo"						    
 			android:layout_width="wrap_content"
 			android:layout_height="fill_parent"
-			android:layout_marginRight="6dip"				
-			android:layout_gravity="right|center_vertical"		
-			android:gravity="right|center_vertical"			
-			android:src="@drawable/icon_search"								
-			/>		
-		<ImageView
-		    android:id="@+id/refresh"			
-		    android:layout_height="fill_parent"		    
-			android:layout_width="wrap_content"
-		    android:layout_marginRight="20dip"				
 			android:layout_gravity="center"		
-			android:gravity="center"			
-			android:src="@drawable/icon_refresh"									
-			/>					
-	</LinearLayout>																	
+			android:gravity="center"		
+			android:adjustViewBounds="true"
+			android:scaleType="fitCenter"	
+			android:visibility="visible"											
+			/>		
+				
+	</FrameLayout>																	
 </LinearLayout>	
