--- a/res/layout/channel_tablet.xml
+++ b/res/layout/channel_tablet.xml
@@ -36,19 +36,7 @@
 				android:layout_gravity="center"		
 				android:gravity="center"	
 				android:src="@drawable/icon_playlist"								
-				/>			    
-		    <LinearLayout
-		        android:id="@+id/title_row"
-			    android:layout_width="match_parent"
-			    android:layout_height="wrap_content"
-			    android:orientation="horizontal"
-				android:layout_marginLeft="10dip"
-				android:layout_marginRight="10dip"
-				android:layout_marginTop="10dip"
-				android:layout_marginBottom="10dip"
-				android:layout_gravity="bottom"	    
-				android:background="#40000000">		
-			</LinearLayout>			
+				/>			    	
 		</FrameLayout>
     				
 		<LinearLayout	    
@@ -59,6 +47,7 @@
 			android:layout_marginBottom="10dip"		    
 		    android:orientation="vertical"
 			android:layout_gravity="bottom"
+			android:visibility="visible"
 			android:gravity="bottom">
 		    <LinearLayout	    
 			    android:layout_width="fill_parent"		    
@@ -133,8 +122,16 @@
 				    	android:visibility="gone"
 				    	/>					        
 			    </FrameLayout>		
-		</LinearLayout>				    	
-		<LinearLayout	    
+		</LinearLayout>		
+		    	<ImageView
+			    	android:id="@+id/triple_thumb"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+			        android:layout_gravity="bottom"
+			        android:gravity="bottom"
+			        android:background="#00000000"
+			        />				    	
+		<!-- LinearLayout	    
 		    android:layout_width="fill_parent"		    
 		    android:layout_height="wrap_content"	    
 		    android:orientation="horizontal"
@@ -154,17 +151,7 @@
 			        android:background="#FF0000"
 			        android:adjustViewBounds="true"
 			        android:scaleType="centerCrop"
-			        />	
-			    <!-- TextView
-			        android:id="@+id/episode1_title"
-				    android:layout_width="match_parent"
-				    android:layout_height="wrap_content"	    		    
-					android:layout_gravity="bottom"	    
-					android:background="#40000000"
-					android:textSize="11dip"
-					android:textColor="#FFFFFF"
-					android:singleLine="true"
-					/-->					        
+			        />						        
 		    </FrameLayout>
 			<FrameLayout 
 		        android:layout_width="0dip" 
@@ -180,17 +167,7 @@
 			        android:background="#FF0000"
 			        android:adjustViewBounds="true"
 			        android:scaleType="centerCrop"
-			        />	
-			    <!-- TextView
-			        android:id="@+id/episode2_title"
-				    android:layout_width="match_parent"
-				    android:layout_height="wrap_content"
-					android:layout_gravity="bottom"	    
-					android:background="#40000000"
-					android:textSize="11dip"
-					android:textColor="#FFFFFF"
-					android:singleLine="true"					
-					/-->					        
+			        />					        
 		    </FrameLayout>	     
 			<FrameLayout 
 		        android:layout_width="0dip" 
@@ -206,19 +183,9 @@
 			        android:background="#FF0000"
 			        android:adjustViewBounds="true"
 			        android:scaleType="centerCrop"
-			        />	
-			    <!-- TextView
-			        android:id="@+id/episode3_title"
-				    android:layout_width="match_parent"
-				    android:layout_height="wrap_content"		    
-					android:layout_gravity="bottom"	    
-					android:background="#40000000"
-					android:textSize="11dip"
-					android:textColor="#FFFFFF"
-					android:singleLine="true"					
-					/-->					        
+			        />					        
 		    </FrameLayout>          
-		</LinearLayout>    		
+		</LinearLayout-->    		
 		</LinearLayout>
 	</LinearLayout>		
 
